Name:                html2hamlet
Version:             0.2.0
Synopsis:            HTML to Hamlet converter

Description:         HTML to Hamlet converter

License:             BSD3
License-file:        LICENSE
Homepage:            http://github.com/ajnsit/html2hamlet
Author:              Hideyuki Tanaka, Anupam Jain
Maintainer:          ajnsit@gmail.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Source-repository head
  Type: git
  Location: https://github.com/ajnsit/html2hamlet.git

Executable html2hamlet
  Main-is:             Html2Hamlet.hs
  
  Build-depends:       base
                     , bytestring
                     , text          >= 1.2.0.6 && < 1.3
                     , blaze-builder >= 0.4.0.1 && < 0.5
                     , shakespeare   >= 2.0.5   && < 2.1
                     , xmlhtml       >= 0.2.3.4 && < 0.3
                     , cmdargs       >= 0.10.12 && < 0.11
                     , http-conduit  >= 2.1.5   && < 2.2
                     , network       >= 2.6.1.0 && < 2.7

